# invoice-ocr-extractor

./: .gitignore  README.md  compose.yaml
backend/: .env.example  Dockerfile  pyproject.toml  pyrefly.toml
backend/src/invoice_agent/: __init__.py  agents.py  app.py  models.py  settings.py
backend/src/invoice_agent/document/: __init__.py  errors.py  image_extractor.py  loader.py  models.py  pdf_extractor.py  text_extractor.py
backend/src/invoice_agent/llm/: __init__.py  invoice_extractor.py  openrouter_client.py  prompts.py
backend/src/invoice_agent/repositories/: invoice_repository.py
backend/src/invoice_agent/routes/: health.py  invoices.py
backend/src/invoice_agent/services/: invoice_service.py  validation_service.py
backend/tests/: test_agents.py  test_app.py  test_ocr.py  test_settings.py  test_storage.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/api/: invoices.ts
frontend/src/lib/components/: AppHeader.svelte  InvoiceFields.svelte  InvoiceList.svelte  InvoiceReview.svelte  LineItemsEditor.svelte  RawTextPanel.svelte  UploadPanel.svelte  WarningsPanel.svelte
frontend/src/lib/types/: invoice.ts
frontend/src/routes/: +page.svelte
samples/: acme-invoice.txt
