[project]
name = "invoice-review-agent-backend"
version = "0.1.0"
description = "Litestar backend for invoice document evidence extraction and LLM-assisted review."
requires-python = ">=3.9"
dependencies = [
  "litestar>=2.15,<3",
  "pydantic>=2.8,<3",
  "httpx>=0.27,<1",
  "json-repair>=0.35,<1",
  "Pillow>=11.0,<12",
  "PyMuPDF>=1.24,<2",
  "pdfplumber>=0.11,<1",
  "pytesseract>=0.3.13,<1",
  "python-multipart>=0.0.9,<1",
  "python-dotenv>=1.0,<2",
  "uvicorn>=0.30,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
